--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div data-id="mouth" class="button mouth"></div>
       </div>
     </div>
-    <script src="/js/lib/jquery.js"></script>
-    <script src="/js/lib/jquery.easing.min.js"></script>
-    <script src="/js/lib/jquery.backgroundpos.min.js"></script>
+    <script src="js/lib/jquery.js"></script>
+    <script src="js/lib/jquery.easing.min.js"></script>
+    <script src="js/lib/jquery.backgroundpos.min.js"></script>
     <script src="js/app.min.js"></script>
   </body>
 </html>
