--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         <div data-id="nose" class="button nose"></div>
         <div data-id="mouth" class="button mouth"></div>
       </div>
+      <div id="balloon">
+        <p class="result">スロット失敗...</p>
+        <p class="nameContainer">「<span class="name">タージマハル</span>」</p>
+        <div class="buttons">
+          <p class="message"></p>
+          <p class="retry">
+            <button id="retry">もう一度遊ぶ</button>
+          </p>
+        </div>
+      </div>
     </div>
     <script src="js/lib/jquery.js"></script>
     <script src="js/lib/jquery.easing.min.js"></script>
